package DOO.DD.DD01.v002extensible;

public interface VisitanteAnimal {
    void visitar(Perro perro);
    void visitar(Pajaro pajaro);
}